--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body{
-    background-color: rgb(117, 117, 117);
-}
-
-header{
-    display: flex;
-    justify-content: center;
-}
+body {
+  background-color: #2a2a2a;
+  color: white; }
