--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
 body {
   background-color: #2a2a2a;
   color: white; }
+
+#header {
+  display: flex;
+  justify-content: center;
+  background-color: #989898; }
