--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,3 +2,9 @@ body{
     background-color: rgb(42, 42, 42);
     color: white;
 }
+
+#header{
+    display: flex;
+    justify-content: center;
+    background-color: rgb(152, 152, 152);
+}
