--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+
 *{
   margin: 0;
   padding: 0;
@@ -6,6 +8,7 @@
 
 body {
   background-color: #ffffffd1;
+  font-family: "Ubuntu", sans-serif;
   /* background-color: #c5c3ccd1; */
   color: white;
   padding-top: 60px;
@@ -21,7 +24,7 @@ body {
 #div1{
   
   margin: 20px; 
-  margin-top: 10px;
+  margin-top: 4px;
   width: 95%;
   height: 480px;
   display: flex;
@@ -89,6 +92,37 @@ body {
 
 }
 
+#cuenta-carrito{
+  background-color: rgb(193, 92, 92);
+  border-radius: 100%;
+  display: inline-block;
+  width: 20px;
+  line-height: 20px;
+  aspect-ratio: 1;
+  text-align: center;
+  position: absolute;
+  font-weight: 500;
+  font-size: 12px;
+  
+
+}
+
+#productos-carrito{
+
+  display:flex;
+  justify-content: right;
+  align-items: center;
+  width: 500px;
+  height: 400px;
+  border: solid black;
+}
+
+
+
+
+
+
+
 
 /* #cards :hover {
   border: solid 2px rgb(18, 194, 48);
@@ -112,14 +146,7 @@ body {
 
 
 
- #cartContainer {
-  border: 1px solid rgb(2, 2, 2);
-  background-color: rgb(255, 255, 255);
-  display: block;
-  min-width: 100px;
-  min-height: 50px;
-  color: black; /* Asegúrate de que esté visible */
-}
+ 
 
 
 
@@ -129,47 +156,13 @@ body {
 ========================
 ======================= */
 
-.cart__sidebar {
-  position: fixed;
-  top: 0;
-  right: -300px; /* Oculto fuera de la vista */
-  width: 300px;
-  height: 100%;
-  background-color: #f4f4f4;
-  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
-  transition: right 0.3s ease;
-  padding: 20px;
-  z-index: 1000;
-}
 
-.cart__sidebar--open {
-  right: 0; /* Se muestra cuando se añade la clase --open */
-}
 
-.cart__header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
-}
 
-.cart__title {
-  color: #333;
-  font-size: 1.5rem;
-  font-weight: bold;
-}
 
-.cart__close {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  cursor: pointer;
-  font-size: 1.5rem;
-  border: none;
-  background-color: transparent;
-  color: rgb(0, 0, 0);
-  z-index: 1002; /* Asegúrate de que esté sobre otros elementos */
-}
+
+
+
 
 .cart__container {
   display: flex;
@@ -291,6 +284,7 @@ body {
 .cart__increase,
 .cart__decrease,
 .cart__remove {
+  
   background-color: #c0c0c0;
   padding: 10px;
   border: 1px solid gainsboro;
@@ -304,4 +298,15 @@ body {
 .cart__remove:hover {
   background-color: #555;
   color: white;
+
+}
+
+.cartButtons{
+  display: flex;
+  padding: 20px;
+
+  height: 80px;
+  width: 180px;
+  border: 2px solid grey ;
+  border-radius: 8px;
 }
